Fixed navbar at the top, so it's stuck there when you scroll through the gallery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
   padding: 0;
   border: 0;
 }
+
+nav {
+    position: fixed;
+}
+
 /*------------------------------Logo */
 
 .logo {
@@ -122,7 +127,6 @@
 /*------------------------------Navbar */
 
 .navbar {
-  top: 5px;
   margin-bottom: 0;
   border: 0;
   width: 100%;
